--- a/library_res/src/main/res/values/config_interge.xml
+++ b/library_res/src/main/res/values/config_interge.xml
@@ -13,4 +13,9 @@
     <!--分页-->
     <integer name="config_pageData_defaultSize">10</integer>
     <integer name="config_pageData_MaxSize">200</integer>
+    <!--购物车商品选中状态-->
+    <integer-array name="config_trolley_checkstatus">
+        <item>0</item>
+        <item>1</item>
+    </integer-array>
 </resources>
