--- a/module_order/src/main/res/layout/order_activity_orderconfirm_a.xml
+++ b/module_order/src/main/res/layout/order_activity_orderconfirm_a.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/qmui_topbar"
-                tools:listitem="@layout/order_item_shoppingcart"/>
+                tools:listitem="@layout/order_item_goods"/>
 
         <!--底部-->
         <android.support.v7.widget.CardView
