--- a/module_order/src/main/res/layout/order_activity_shoppingcart.xml
+++ b/module_order/src/main/res/layout/order_activity_shoppingcart.xml
@@ -1,107 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <com.qmuiteam.qmui.widget.QMUITopBarLayout
-        android:id="@+id/qmui_topbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<layout>
+    <data>
+        <variable name="viewModel" type="com.lcworld.module_order.viewmodel.TrolleyViewModel"/>
+        <import type="android.view.View"/>
+    </data>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_goods"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/bg_bottom"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/qmui_topbar"
-        tools:listitem="@layout/order_item_shoppingcart" />
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/bg_bottom"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/white"
-        app:cardElevation="@dimen/gap_size9"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="360:43"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <CheckBox
-                android:id="@+id/cbox_checkall"
-                android:layout_width="wrap_content"
-                android:button="@drawable/selector_cbox_a"
-                android:layout_height="0dp"
-                android:layout_marginStart="@dimen/gap_size25"
-                android:paddingStart="@dimen/gap_size7"
-                android:textColor="@color/tx_colorb"
-                android:text="@string/order_trolley_checkall"
-                android:textSize="@dimen/tx_size13"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_total_desc"
-                android:layout_width="wrap_content"
-                android:textColor="@color/tx_colorb"
-                android:textSize="@dimen/tx_size13"
-                android:text="@string/order_trolley_total"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/cbox_checkall"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_total_value"
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+                android:id="@+id/qmui_topbar"
                 android:layout_width="0dp"
-                android:textColor="@color/tx_colore"
-                android:textSize="@dimen/tx_size15"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/gap_size10"
-                android:layout_marginEnd="10dp"
-                android:maxLines="1"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/btn_settle"
-                app:layout_constraintStart_toEndOf="@id/tv_total_desc"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="0.212121213131231313123231300" />
-
-            <Button
-                android:id="@+id/btn_settle"
-                android:layout_width="wrap_content"
-                android:textColor="@color/white"
-                android:gravity="center"
-                android:minHeight="30dp"
-                android:textSize="@dimen/tx_size14"
-                android:elevation="10dp"
-                android:layout_marginEnd="@dimen/gap_size10"
-                android:minWidth="100dp"
-                android:paddingStart="@dimen/gap_size23"
-                android:paddingEnd="@dimen/gap_size23"
-                android:paddingTop="@dimen/gap_size8"
-                android:paddingBottom="@dimen/gap_size8"
-                android:text="@string/order_trolley_settle"
-                android:background="@drawable/shape_btnbg_b"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-    </android.support.v7.widget.CardView>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_goods"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@id/bg_bottom"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/qmui_topbar"
+                tools:listitem="@layout/order_item_shoppingcart"/>
 
+        <android.support.v7.widget.CardView
+                android:id="@+id/bg_bottom"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/white"
+                app:cardElevation="@dimen/gap_size9"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="360:43"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-</android.support.constraint.ConstraintLayout>
+            <android.support.constraint.ConstraintLayout
+                    android:id="@+id/clayout_settle"
+                    android:layout_width="match_parent"
+                    android:visibility="@{viewModel.valueTrolleyEdit?View.GONE:View.VISIBLE}"
+                    android:layout_height="match_parent">
+
+                <CheckBox
+                        android:id="@+id/cbox_checkall"
+                        android:layout_width="wrap_content"
+                        android:button="@drawable/selector_cbox_a"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="@dimen/gap_size25"
+                        android:paddingStart="@dimen/gap_size7"
+                        android:textColor="@color/tx_colorb"
+                        android:text="@string/order_trolley_checkall"
+                        android:textSize="@dimen/tx_size13"
+                        app:onClickCommand="@{viewModel.clickedAllChecked}"
+                        android:checked="@={viewModel.valueAllChecked}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                        android:id="@+id/tv_total_desc"
+                        android:layout_width="wrap_content"
+                        android:textColor="@color/tx_colorb"
+                        android:textSize="@dimen/tx_size13"
+                        android:text="@string/order_detail_total"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="35dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/cbox_checkall"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                        android:id="@+id/tv_total_value"
+                        android:layout_width="0dp"
+                        android:textColor="@color/tx_colore"
+                        android:textSize="@dimen/tx_size15"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/gap_size10"
+                        android:layout_marginEnd="10dp"
+                        android:maxLines="1"
+                        android:text="@{viewModel.valueTotalPrice}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/btn_settle"
+                        app:layout_constraintStart_toEndOf="@id/tv_total_desc"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="0.212121213131231313123231300"/>
+
+                <Button
+                        android:id="@+id/btn_settle"
+                        android:layout_width="wrap_content"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        android:minHeight="30dp"
+                        android:textSize="@dimen/tx_size14"
+                        android:elevation="10dp"
+                        android:layout_marginEnd="@dimen/gap_size10"
+                        android:minWidth="100dp"
+                        android:paddingStart="@dimen/gap_size23"
+                        android:paddingEnd="@dimen/gap_size23"
+                        android:paddingTop="@dimen/gap_size8"
+                        android:paddingBottom="@dimen/gap_size8"
+                        android:text="@string/order_trolley_settle"
+                        app:onClickCommand="@{viewModel.clickedSettle}"
+                        android:background="@drawable/shape_btnbg_b"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.constraint.ConstraintLayout
+                    android:id="@+id/clayout_edit"
+                    android:layout_width="match_parent"
+                    android:visibility="@{viewModel.valueTrolleyEdit?View.VISIBLE:View.GONE}"
+                    android:layout_height="match_parent">
+
+                <CheckBox
+                        android:id="@+id/cbox_edit_checkall"
+                        android:layout_width="wrap_content"
+                        android:button="@drawable/selector_cbox_a"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="@dimen/gap_size25"
+                        android:paddingStart="@dimen/gap_size7"
+                        android:textColor="@color/tx_colorb"
+                        android:text="@string/order_trolley_checkall"
+                        app:onClickCommand="@{viewModel.clickedAllChecked}"
+                        android:checked="@={viewModel.valueAllChecked}"
+                        android:textSize="@dimen/tx_size13"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                <Button
+                        android:id="@+id/btn_edit_settle"
+                        android:layout_width="wrap_content"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        android:minHeight="30dp"
+                        android:textSize="@dimen/tx_size14"
+                        android:elevation="10dp"
+                        android:layout_marginEnd="@dimen/gap_size10"
+                        android:minWidth="100dp"
+                        android:paddingStart="@dimen/gap_size23"
+                        android:paddingEnd="@dimen/gap_size23"
+                        android:paddingTop="@dimen/gap_size8"
+                        android:paddingBottom="@dimen/gap_size8"
+                        app:onClickCommand="@{viewModel.clickedDelete}"
+                        android:text="@string/order_trolley_delete"
+                        android:background="@drawable/shape_btnbg_b"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
