--- a/module_order/src/main/res/layout/order_frag_myorder.xml
+++ b/module_order/src/main/res/layout/order_frag_myorder.xml
@@ -7,9 +7,16 @@
         <variable name="viewModel" type="com.lcworld.module_order.bean.OrderListViewModel"/>
     </data>
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_order"
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/order_item_myorder"/>
+            android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_order"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/order_item_myorder"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </layout>
