--- a/module_home/src/main/res/layout/home_layout_filtrate.xml
+++ b/module_home/src/main/res/layout/home_layout_filtrate.xml
@@ -16,11 +16,11 @@
         android:button="@null"
         android:drawableEnd="@drawable/selector_cbox_b"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/cbox_displaymode"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/cbox_filtrate_sales"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cbox_displaymode" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/cbox_filtrate_sales"
@@ -33,10 +33,10 @@
         android:button="@null"
         android:drawableEnd="@drawable/selector_cbox_b"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/cbox_displaymode"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/cbox_filtrate_price"
         app:layout_constraintStart_toEndOf="@id/cbox_filtrate_recom"
-        app:layout_constraintTop_toTopOf="@id/cbox_displaymode" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/cbox_filtrate_price"
@@ -49,33 +49,9 @@
         android:button="@null"
         android:drawableEnd="@drawable/selector_cbox_b"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/cbox_displaymode"
-        app:layout_constraintEnd_toStartOf="@id/cbox_filtrate_discount"
-        app:layout_constraintStart_toEndOf="@id/cbox_filtrate_sales"
-        app:layout_constraintTop_toTopOf="@id/cbox_displaymode" />
-
-    <CheckBox
-        android:id="@+id/cbox_filtrate_discount"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="@dimen/gap_size20"
-        android:drawablePadding="@dimen/gap_size4"
-        android:text="@string/home_filtrate_discount"
-        android:textColor="@drawable/selector_txcolor_a"
-        android:textSize="@dimen/tx_size14"
-        android:button="@null"
-        android:drawableEnd="@drawable/selector_cbox_b"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/cbox_displaymode"
-        app:layout_constraintEnd_toStartOf="@id/cbox_displaymode"
-        app:layout_constraintStart_toEndOf="@id/cbox_filtrate_price"
-        app:layout_constraintTop_toTopOf="@id/cbox_displaymode" />
-
-    <CheckBox
-        android:id="@+id/cbox_displaymode"
-        android:button="@drawable/home_selector_switchdisplay"
-        android:paddingEnd="@dimen/gap_size10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cbox_filtrate_discount" />
+        android:layout_marginEnd="@dimen/gap_size13"
+        app:layout_constraintStart_toEndOf="@id/cbox_filtrate_sales"
+        app:layout_constraintTop_toTopOf="parent" />
 </merge>
